# vitals-cosmic

./: Cargo.toml  LICENSE  README.md
assets/: .gitkeep
data/: com.corecoding.VitalsCosmic.desktop
gentoo/app-admin/vitals-cosmic/: metadata.xml  vitals-cosmic-0.1.0.ebuild
scripts/: record-demo.sh
src/: app.rs  config.rs  dbus.rs  format.rs  icons.rs  main.rs  model.rs
src/view/: graph.rs  mod.rs  panel.rs  popup.rs  prefs.rs
